Fixed work items

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <img class="logo left" src="./img/logo.png">
       <h1 class="text-center"><span id="launch">LAUNCH.</span>
           <br>IT'S NEVER BEEN SO EASY</br>
-          <br><div class="bounce"><span class="glyphicon glyphicon-menu-down bounce"></span></div></br>
+          <br><a href="#help-section"><div class="bounce"><span class="glyphicon glyphicon-menu-down" style="color:#fff"></span></div></a></br>
       </h1>
 
             <nav class="navbar">
@@ -59,6 +59,7 @@
     </section> <!-- END OF BANNER SECTION -->
 
     <section id="help"> <!-- start of services section -->
+      <div id="help-section"></div>
     <div class="container">
 
       <h2 id="section-head" class="text-center">HOW WE CAN HELP</h2>
@@ -236,7 +237,6 @@
                       <li class="work-header text-center header-branding selected" work-item="branding">Branding</li>
                       <li class="work-header text-center header-webdesign" work-item="web-design">Website Design</li>
                       <li class="work-header text-center header-appdesign" work-item="app-design">App Design</li>
-                      <li class="work-header text-center header-casestudy" work-item="case-study">Case Studies</li>
                     </ul>
                     <div class="work-images branding">
                         <img class="work-image" src="./img/work/logo-1.png">
@@ -259,25 +259,16 @@
                         <img class="work-image" src="./img/work/logo-8.png">
                     </div>
                     <div class="work-images app-design hide">
-                        <img class="work-image" src="./img/work/logo-1.png">
-                        <img class="work-image" src="./img/work/logo-2.png">
-                        <img class="work-image" src="./img/work/logo-3.png">
-                        <img class="work-image" src="./img/work/logo-4.png">
-                        <img class="work-image" src="./img/work/logo-5.png">
-                        <img class="work-image" src="./img/work/logo-6.png">
-                        <img class="work-image" src="./img/work/logo-7.png">
-                        <img class="work-image" src="./img/work/logo-8.png">
+                        <img class="work-image" src="./img/work/justin-app-1.png">
+                        <img class="work-image" src="./img/work/justin-app-2.png">
+                        <img class="work-image" src="./img/work/justin-app-1.png">
+                        <img class="work-image" src="./img/work/justin-app-2.png">
+                        <img class="work-image" src="./img/work/justin-app-1.png">
+                        <img class="work-image" src="./img/work/justin-app-2.png">
+                        <img class="work-image" src="./img/work/justin-app-1.png">
+                        <img class="work-image" src="./img/work/justin-app-2.png">
                     </div>
-                    <div class="work-images case-studies hide">
-                        <img class="work-image" src="./img/work/logo-1.png">
-                        <img class="work-image" src="./img/work/logo-2.png">
-                        <img class="work-image" src="./img/work/logo-3.png">
-                        <img class="work-image" src="./img/work/logo-4.png">
-                        <img class="work-image" src="./img/work/logo-5.png">
-                        <img class="work-image" src="./img/work/logo-6.png">
-                        <img class="work-image" src="./img/work/logo-7.png">
-                        <img class="work-image" src="./img/work/logo-8.png">
-                    </div>
+
                 </div>
           </div>
       </section>
