--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="row">
+
             <div id="desktop-nav">
               <a href="#about-part">About</a>
               <a href="#work-part">Work</a>
@@ -32,108 +32,109 @@
 
             </div>
             <img class="logo left" src="./img/logo.png">
-        </div>
 
-        <div class="row">
+
             <div class="container">
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
+              <div class="team-page-container">
+                <div class="row">
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
+                <div class="row">
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
+                <div class="row">
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
                 </div>
+                <div class="row">
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <a href="#"><img src="img/people/notjefffree.jpeg" style="width:220px;border-radius:100%"></a>
+                          <div class="name">Rob Dearling</div>
+                          <div class="subtext">Web Developer</div>
+                      </div>
+                  </div>
+                </div>
+
+
+              </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="container">
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="container">
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="container">
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team-member">
-                        <img src="img/people/notjefffree.jpeg" style="width:250px;border-radius:100%">
-                        <div class="name">Rob Dearling</div>
-                        <div class="subtext">Web Developer</div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+
+
 
 
 
