--- a/team.html
+++ b/team.html
@@ -78,7 +78,7 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img ></a>
+                            <a href="#"><img src="img/people/rob.png" ></a>
                           </div>
                           <div class="name">Rob Dearling</div>
                           <div class="subtext">Developer</div>
