--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                       <div class="swiper-slide"><img src="img/people/nogridlines.png"/><div class="caption">DEREK NEWELL</div><p>Marketing</p></div>
                       <div class="swiper-slide"><img src="img/people/louis.jpg"/><div class="caption">LOUIS MORGAN</div><p>Senior Developer</p></div>
                       <div class="swiper-slide"><img src="img/people/yambao.jpg"/><div class="caption">JUSTIN YAMBAO</div><p>Senior Designer</p></div>
-                      <div class="swiper-slide"><img src=""/><div class="caption">ROB DEARLING</div><p>Developer</p></div>
+                      <div class="swiper-slide"><img src="img/people/rob.png"/><div class="caption">ROB DEARLING</div><p>Developer</p></div>
                       <div class="swiper-slide"><img src="img/people/notjefffree.jpeg"/><div class="caption">ENOCH APPATHURAI</div><p>Developer</p></div>
                       <div class="swiper-slide"><img src="img/people/oseii.jpg"/><div class="caption">MARTIHN MERTENS</div><p>Designer</p></div>
                       <div class="swiper-slide"><img src=""/><div class="caption">BEN DEMPSEY</div><p>Brand Designer</p></div>
