--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <p>Co-Owner</p>
               </div>
               <div class="member">
-                <img src="img/people/jakelucifer.jpg" />
+                <img src="img/people/nogridlines.png" />
                 <h4>DEREK NEWELL</h4>
                 <p>Merketing</p>
               </div>
@@ -230,7 +230,7 @@
       </section> <!-- end of team section -->
       <div id="work-part"></div>
       <section id="work">
-          <div class="container">
+        <!--  <div class="container">
               <h2 id="section-head" class="text-center">View Our work</h2>
                 <div class="work-header-container">
                     <ul>
@@ -272,7 +272,34 @@
 
 
                 </div>
+          </div> -->
+
+          <div class="container">
+                <h2 id="section-head" class="text-center">View Our work</h2>
+                  <div class="work-header-container">
+                      <ul>
+                        <li class="work-header text-center header-branding selected" work-item="branding">Branding</li>
+                        <li class="work-header text-center header-webdesign" work-item="web-design">Website Design</li>
+                        <li class="work-header text-center header-appdesign" work-item="app-design">App Design</li>
+                      </ul>
+                  </div>
+                  <div class="work-images text-center branding">
+                    <div class="work-image"><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><img src="./img/work/logo-4.png" /></div>
+                    <div class="work-image"><img src="./img/work//web2.jpg" /></div>
+                    <div class="work-image"><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><img src="./img/work//web2.jpg" /></div>
+                    <div class="work-image"><img src="./img/work//web1.jpg" /></div>
+                    <div class="work-image"><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><img src="./img/work/justin-gif.gif" /></div>
+
+
+
+                  </div>
           </div>
+
+
+
       </section>
 
       <section id="companies">
