added hover on work imgs and jquery into main.js

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                       </ul>
                   </div>
                   <div class="work-images text-center branding">
-                    <div class="work-image"><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
                     <div class="work-image"><img src="./img/work/logo-4.png" /></div>
                     <div class="work-image"><img src="./img/work//web2.jpg" /></div>
                     <div class="work-image"><img src="./img/work/justin-gif.gif" /></div>
