--- a/index.html
+++ b/index.html
@@ -285,13 +285,13 @@
                   </div>
                   <div class="work-images text-center branding">
                     <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
-                    <div class="work-image"><img src="./img/work/logo-4.png" /></div>
-                    <div class="work-image"><img src="./img/work//web2.jpg" /></div>
-                    <div class="work-image"><img src="./img/work/justin-gif.gif" /></div>
-                    <div class="work-image"><img src="./img/work//web2.jpg" /></div>
-                    <div class="work-image"><img src="./img/work//web1.jpg" /></div>
-                    <div class="work-image"><img src="./img/work/justin-gif.gif" /></div>
-                    <div class="work-image"><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-4.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work//web2.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work//web2.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work//web1.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
 
 
 
@@ -302,7 +302,7 @@
 
       </section>
 
-      
+
         <div id="contact-part"></div>
       <section id="contact">
           <div class="container">
