--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 </div>
                 <ul class="menu-toggle">
                   <li><a href="#about-part">About Us</a></li>
-                  <li><a href="#about-part">About Us</a></li>
-                  <li><a href="#about-part">About Us</a></li>
+                  <li><a href="#work-part">Work</a></li>
+                  <li><a href="#contact-part">Contact</a></li>
                 </ul>
               </div>
             </nav>
@@ -274,7 +274,7 @@
                 </div>
           </div> -->
 
-          <div class="container">
+          <div class="container work-container">
                 <h2 id="section-head" class="text-center">View Our work</h2>
                   <div class="work-header-container">
                       <ul>
@@ -284,17 +284,31 @@
                       </ul>
                   </div>
                   <div class="work-images text-center branding">
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-1.png" /></div>
                     <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-4.png" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work//web2.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-2.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-3.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-5.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-6.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-7.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/logo-8.png" /></div>
+                  </div>
+                  <div class="work-images text-center web-design hide">
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/razer.jpeg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/web1.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/web2.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/share.gif" /></div>
                     <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work//web2.jpg" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work//web1.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/bose.jpg" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-app-2.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-app-1.png" /></div>
+                  </div>
+                  <div class="work-images text-center app-design hide">
+
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/share.gif" /></div>
                     <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
-                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-gif.gif" /></div>
-
-
-
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-app-2.png" /></div>
+                    <div class="work-image"><div class="overlay"><h4>WORK TITLE</h4></div><img src="./img/work/justin-app-1.png" /></div>
                   </div>
           </div>
 
@@ -326,8 +340,8 @@
               </div>
               <div class="row">
                   <div class="col-md-12">
-                    <div class="form-group">
-                        <textarea class="form-control" rows="5" id="message" name="message" placeholder="contact"></textarea>
+                    <div class="form-group message-field">
+                        <textarea class="form-control" rows="5" id="message" name="message" placeholder="Contact"></textarea>
                     </div>
                   </div>
               </div>
