added cameron because rob sucks

--- a/team.html
+++ b/team.html
@@ -40,7 +40,16 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img src="img/people/tomrdesigns.jpg"></a>
+                            <a href="https://dribbble.com/CamRoyal"><img src="img/people/royal.jpg"></a>
+                          </div>
+                          <div class="name">Cameron Royal</div>
+                          <div class="subtext">Owner</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <div class="member-image">
+                            <a href="https://www.behance.net/tomrdesigns"><img src="img/people/tomrdesigns.jpg"></a>
                           </div>
                           <div class="name">Tom Roberts</div>
                           <div class="subtext">Co-Owner</div>
@@ -49,45 +58,38 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img src="img/people/nogridlines.png"></a>
+                            <a href="https://www.behance.net/NoGridlines"><img src="img/people/nogridlines.png"></a>
                           </div>
                           <div class="name">Derek Newell</div>
                           <div class="subtext">Marketing</div>
                       </div>
                   </div>
-                  <div class="col-md-4">
-                      <div class="team-member">
-                          <div class="member-image">
-                            <a href="#"><img src="img/people/louis.jpg"></a>
-                          </div>
-                          <div class="name">Louis Morgan</div>
-                          <div class="subtext">Senior Developer</div>
-                      </div>
-                  </div>
+
                 </div>
                 <div class="row">
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img src="img/people/yambao.jpg"></a>
+                            <a href="https://twitter.com/loumorgsy"><img src="img/people/louis.jpg"></a>
+                          </div>
+                          <div class="name">Louis Morgan</div>
+                          <div class="subtext">Senior Developer</div>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <div class="member-image">
+                            <a href="http://justinyambao.com/"><img src="img/people/yambao.jpg"></a>
                           </div>
                           <div class="name">Justin Yambao</div>
                           <div class="subtext">Senior Designer</div>
                       </div>
                   </div>
+<!-- replace member -->
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img src="img/people/rob.png" ></a>
-                          </div>
-                          <div class="name">Rob Dearling</div>
-                          <div class="subtext">Developer</div>
-                      </div>
-                  </div>
-                  <div class="col-md-4">
-                      <div class="team-member">
-                          <div class="member-image">
-                            <a href="#"><img src="img/people/notjefffree.jpeg"></a>
+                            <a href="https://twitter.com/enociz"><img src="img/people/notjefffree.jpeg"></a>
                           </div>
                           <div class="name">Enoch Appathurai</div>
                           <div class="subtext">Developer</div>
@@ -98,7 +100,7 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img src="img/people/oseii.jpg"></a>
+                            <a href="https://twitter.com/MMCreated"><img src="img/people/oseii.jpg"></a>
                           </div>
                           <div class="name">Martihn Mertens</div>
                           <div class="subtext">Designer</div>
@@ -107,7 +109,7 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img ></a>
+                            <a href="https://www.behance.net/BenDempsey"><img ></a>
                           </div>
                           <div class="name">Ben Dempsey</div>
                           <div class="subtext">Brand Designer</div>
@@ -116,7 +118,7 @@
                   <div class="col-md-4">
                       <div class="team-member">
                           <div class="member-image">
-                            <a href="#"><img src="img/people/dannyh01.jpg"></a>
+                            <a href=""><img src="img/people/dannyh01.jpg"></a>
                           </div>
                           <div class="name">Danny Hill</div>
                           <div class="subtext">Designer</div>
@@ -141,7 +143,16 @@
                           <div class="name">Luuk Wijgerse</div>
                           <div class="subtext">Motion Artist</div>
                       </div>
+
                   </div>
+                  <div class="col-md-4">
+                      <div class="team-member">
+                          <div class="member-image">
+                            <a href="https://twitter.com/ParadigmSX"><img src="img/people/rob.png" ></a>
+                          </div>
+                        <div class="name">Rob Dearling</div>
+                        <div class="subtext">Developer</div>
+                      </div>
 
                 </div>
 
